# german-qa-rag

./: .pre-commit-config.yaml  README.md  chainlit.md  pyproject.toml
qa_rag/: cli.py  pipeline.py  prompts.py  server.py  settings.py  verify.py
