[tool.poetry]
name = "qa-rag"
version = "0.1.0"
description = ""
authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1"
farm-haystack = {extras = ["inference"], version = "^1.20.1"}
chainlit = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"rag" = "qa_rag.cli:run"
